tested new LOS functions

--- a/Lab 6.2/Template/imgui.ini
+++ b/Lab 6.2/Template/imgui.ini
@@ -113,6 +113,11 @@ Pos=0,0
 Size=354,267
 Collapsed=0
 
+[Window][Lab 6 - Part 2]
+Pos=0,0
+Size=354,267
+Collapsed=0
+
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
