--- a/Lab 7.1/Template/Template.vcxproj
+++ b/Lab 7.1/Template/Template.vcxproj
@@ -163,15 +163,19 @@
     <ClCompile Include="..\include\IMGUI\imgui_widgets.cpp" />
     <ClCompile Include="..\include\IMGUI_SDL\imgui_sdl.cpp" />
     <ClCompile Include="..\src\Agent.cpp" />
+    <ClCompile Include="..\src\AttackAction.cpp" />
     <ClCompile Include="..\src\Background.cpp" />
     <ClCompile Include="..\src\Button.cpp" />
     <ClCompile Include="..\src\CollisionManager.cpp" />
     <ClCompile Include="..\src\ImGuiWindowFrame.cpp" />
     <ClCompile Include="..\src\Megaman.cpp" />
+    <ClCompile Include="..\src\MoveToLOSAction.cpp" />
+    <ClCompile Include="..\src\MoveToPlayerAction.cpp" />
     <ClCompile Include="..\src\NavigationObject.cpp" />
     <ClCompile Include="..\src\Obstacle.cpp" />
     <ClCompile Include="..\src\PathConnection.cpp" />
     <ClCompile Include="..\src\PathNode.cpp" />
+    <ClCompile Include="..\src\PatrolAction.cpp" />
     <ClCompile Include="..\src\Sprite.cpp" />
     <ClCompile Include="..\src\Starship.cpp" />
     <ClCompile Include="..\src\UIControl.cpp" />
@@ -209,6 +213,7 @@
     <ClInclude Include="..\src\ActionState.h" />
     <ClInclude Include="..\src\Agent.h" />
     <ClInclude Include="..\src\Animation.h" />
+    <ClInclude Include="..\src\AttackAction.h" />
     <ClInclude Include="..\src\Background.h" />
     <ClInclude Include="..\src\Button.h" />
     <ClInclude Include="..\src\CollisionManager.h" />
@@ -220,11 +225,14 @@
     <ClInclude Include="..\src\InputType.h" />
     <ClInclude Include="..\src\LOSMode.h" />
     <ClInclude Include="..\src\Megaman.h" />
+    <ClInclude Include="..\src\MoveToLOSAction.h" />
+    <ClInclude Include="..\src\MoveToPlayerAction.h" />
     <ClInclude Include="..\src\NavigationObject.h" />
     <ClInclude Include="..\src\NodeRecord.h" />
     <ClInclude Include="..\src\Obstacle.h" />
     <ClInclude Include="..\src\PathConnection.h" />
     <ClInclude Include="..\src\PathNode.h" />
+    <ClInclude Include="..\src\PatrolAction.h" />
     <ClInclude Include="..\src\SoundType.h" />
     <ClInclude Include="..\src\Sprite.h" />
     <ClInclude Include="..\src\Starship.h" />
