--- a/Lab 7.1/Template/Template.vcxproj.filters
+++ b/Lab 7.1/Template/Template.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="..\src\RadiusCondition.cpp">
       <Filter>Decision\Conditions</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\DecisionTree.cpp">
+      <Filter>Decision\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\StartScene.h">
@@ -415,6 +418,9 @@
     </ClInclude>
     <ClInclude Include="..\src\RadiusCondition.h">
       <Filter>Decision\Conditions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\DecisionTree.h">
+      <Filter>Decision\Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
