--- a/Lab 7.2/Template/imgui.ini
+++ b/Lab 7.2/Template/imgui.ini
@@ -123,6 +123,11 @@ Pos=0,0
 Size=382,384
 Collapsed=0
 
+[Window][Lab 7 - Part 2]
+Pos=0,0
+Size=382,384
+Collapsed=0
+
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
