--- a/Lab 7.2/Template/Template.vcxproj
+++ b/Lab 7.2/Template/Template.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="..\src\Megaman.cpp" />
     <ClCompile Include="..\src\MoveToLOSAction.cpp" />
     <ClCompile Include="..\src\MoveToPlayerAction.cpp" />
+    <ClCompile Include="..\src\MoveToRangeAction.cpp" />
     <ClCompile Include="..\src\NavigationObject.cpp" />
     <ClCompile Include="..\src\Obstacle.cpp" />
     <ClCompile Include="..\src\PathConnection.cpp" />
@@ -240,6 +241,7 @@
     <ClInclude Include="..\src\Megaman.h" />
     <ClInclude Include="..\src\MoveToLOSAction.h" />
     <ClInclude Include="..\src\MoveToPlayerAction.h" />
+    <ClInclude Include="..\src\MoveToRangeAction.h" />
     <ClInclude Include="..\src\NavigationObject.h" />
     <ClInclude Include="..\src\NodeRecord.h" />
     <ClInclude Include="..\src\Obstacle.h" />
