--- a/Lab 7.2/Template/Template.vcxproj
+++ b/Lab 7.2/Template/Template.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="..\src\PathNode.cpp" />
     <ClCompile Include="..\src\PatrolAction.cpp" />
     <ClCompile Include="..\src\RadiusCondition.cpp" />
+    <ClCompile Include="..\src\RangedCombatCondition.cpp" />
     <ClCompile Include="..\src\Sprite.cpp" />
     <ClCompile Include="..\src\Starship.cpp" />
     <ClCompile Include="..\src\UIControl.cpp" />
@@ -249,6 +250,7 @@
     <ClInclude Include="..\src\PathNode.h" />
     <ClInclude Include="..\src\PatrolAction.h" />
     <ClInclude Include="..\src\RadiusCondition.h" />
+    <ClInclude Include="..\src\RangedCombatCondition.h" />
     <ClInclude Include="..\src\SoundType.h" />
     <ClInclude Include="..\src\Sprite.h" />
     <ClInclude Include="..\src\Starship.h" />
