Added new Action States

--- a/Lab 7.3/Template/Template.vcxproj
+++ b/Lab 7.3/Template/Template.vcxproj
@@ -174,9 +174,11 @@
     <ClCompile Include="..\src\CloseCombatEnemy.cpp" />
     <ClCompile Include="..\src\CollisionManager.cpp" />
     <ClCompile Include="..\src\DecisionTree.cpp" />
+    <ClCompile Include="..\src\FleeAction.cpp" />
     <ClCompile Include="..\src\ImGuiWindowFrame.cpp" />
     <ClCompile Include="..\src\LOSCondition.cpp" />
     <ClCompile Include="..\src\Megaman.cpp" />
+    <ClCompile Include="..\src\MoveToCoverAction.cpp" />
     <ClCompile Include="..\src\MoveToLOSAction.cpp" />
     <ClCompile Include="..\src\MoveToPlayerAction.cpp" />
     <ClCompile Include="..\src\MoveToRangeAction.cpp" />
@@ -212,6 +214,7 @@
     <ClCompile Include="..\src\Target.cpp" />
     <ClCompile Include="..\src\TextureManager.cpp" />
     <ClCompile Include="..\src\Util.cpp" />
+    <ClCompile Include="..\src\WaitBehindCoverAction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\IMGUI\imconfig.h" />
@@ -235,12 +238,14 @@
     <ClInclude Include="..\src\ConditionNode.h" />
     <ClInclude Include="..\src\Config.h" />
     <ClInclude Include="..\src\DecisionTree.h" />
+    <ClInclude Include="..\src\FleeAction.h" />
     <ClInclude Include="..\src\Heuristic.h" />
     <ClInclude Include="..\src\ImGuiWindowFrame.h" />
     <ClInclude Include="..\src\InputType.h" />
     <ClInclude Include="..\src\LOSCondition.h" />
     <ClInclude Include="..\src\LOSMode.h" />
     <ClInclude Include="..\src\Megaman.h" />
+    <ClInclude Include="..\src\MoveToCoverAction.h" />
     <ClInclude Include="..\src\MoveToLOSAction.h" />
     <ClInclude Include="..\src\MoveToPlayerAction.h" />
     <ClInclude Include="..\src\MoveToRangeAction.h" />
@@ -291,6 +296,7 @@
     <ClInclude Include="..\src\TextureManager.h" />
     <ClInclude Include="..\src\Transform.h" />
     <ClInclude Include="..\src\Util.h" />
+    <ClInclude Include="..\src\WaitBehindCoverAction.h" />
     <ClInclude Include="..\src\WindowName.h" />
   </ItemGroup>
   <ItemGroup>
