--- a/Lab 8/Template/imgui.ini
+++ b/Lab 8/Template/imgui.ini
@@ -133,6 +133,11 @@ Pos=0,0
 Size=382,384
 Collapsed=0
 
+[Window][Lab 8]
+Pos=0,0
+Size=382,384
+Collapsed=0
+
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
